[package]
name = "kvs"
version = "0.1.0"
authors = ["btwotwo"]
edition = "2018"
description = "Simple key-value storage for education purposes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
failure = "0.1.7"
failure_derive = "0.1.7"
serde = {version = "1.0.106", features = ["derive"]}
rmp-serde = "0.14.3"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
